# i4a-pysim

./: README.md  docker-compose.yml
config/: config.json
config/networks/: basic-alternate-route.json  basic.json  config.md  pocitos.json
i4a-ui/: Dockerfile  pyproject.toml
i4a-ui/src/i4a_ui/: __main__.py  app.py  uwsgi.py
i4a-ui/src/i4a_ui/assets/: index.html
i4a-ui/src/i4a_ui/controllers/: __init__.py  node.py  static.py
i4a-ui/src/i4a_ui/services/events/: __init__.py  service.py
i4a-ui/src/i4a_ui/services/events/model/: event.py  formatter.py  values.py
nodo/: pyproject.toml
nodo/src/nodo/: __main__.py  device.py  device_main.py  pysim_client.py  qemu_main.py
nodo/src/nodo/routing/: device_core.py  device_output.py  routing_table.py  routing_utils.py
nodo/src/nodo/routing/core/: forwarder.py  home.py  root.py  root_forwarder.py
nodo/src/nodo/sync/: device_core.py  device_output.py
nodo/src/nodo/sync/core/: center.py  forwarder.py
nodo/src/nodo/utils/: __init__.py
nodo/src/nodo/utils/routing/: events.py  external_forwarder.py  internal_forwarder.py  message_factory.py  network.py  peer_messages.py  sibling_messages.py
